tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestSimpleTlsOrigination/fake_root/_test_context/DestinationRule.1510909198.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-fake-tls-credential
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          credentialName: fake-tls-credential
          sni: external.external-4-16320.svc.cluster.local
